@startuml
title Storage Diagram

skinparam classAttributeIconSize 0
hide footbox
hide circle

abstract class "{abstract}\nStorage" {
    + checkIfArgsEmpty(String[], int, String, String): void
    + trimArrayValues(String[]): void
}

class UserStorage {
    {static} - SEPARATOR: String
    - userList: UserList
    - userFilePath: String
    + UserStorage(String)
    + loadData(): UserList
    + writeData(UserList): void
    - makeUserDir(UserList): void
    + handleUserLine(String[]): User
    - getUserFromUserLine(String[]): User
}

class ItemStorage {
    {static} - SEPARATOR: String
    - userList: UserList
    - itemList: ItemList
    - itemFilePath: String
    + ItemStorage(String)
    + loadData(): ItemList
    + writeData(ItemList): void
    - makeItemDir(ItemList): void
    + handleItemLine(String[]): Item
    - getItemFromItemLine(String[]): Item
}

class TransactionStorage {
    {static} - SEPARATOR: String
    - transactionList: TransactionList
    - itemList: ItemList
    - transactionFilePath: String
    + TransactionStorage(String)
    + loadData(): TransactionList
    + writeData(TransactionList): void
    - makeTransactionDir(TransactionList)): void
    + handleTransactionLine(String[]): Transaction
    - getTransactionFromTransactionLine(String[]): Transaction
}
class StorageManager {
    - userFilePath: String
    - itemFilePath: String
    - transactionFilePath: String
    + StorageManager(String, String, String)
    + writeDataToFile(): void
    + checkThreeFilesSimultaneouslyExistOrNotExit(): void
    + handleDataCorruption(String): boolean
    + initializeUserList(String): UserList
    + initializeItemList(String, UserList): ItemList
    + initializeTransactionList(String, UserList, ItemList): TransactionList
}

together {
    class UserStorage
    class ItemStorage
    class TransactionStorage
}

"{abstract}\nStorage" <|-- UserStorage
"{abstract}\nStorage" <|-- ItemStorage
"{abstract}\nStorage" <|-- TransactionStorage
StorageManager -up-> "1" UserStorage: userStorage
StorageManager -up-> "1" ItemStorage: itemStorage
StorageManager -up-> "1" TransactionStorage: transactionStorage

@enduml